19-Ingress/deploy_app-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app-v1
  template:
    metadata:
      labels:
        app: hello-app-v1
    spec:
      containers:
      - name: hello
        image: repocurso/hello-app:1.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v1-svc
spec:
  selector:
    app: hello-app-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
