19-Ingress/deploy_app-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-v2
  template:
    metadata:
      labels:
        app: hello-app-v2
    spec:
      containers:
      - name: hello
        image: repocurso/hello-app:2.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v2-svc
spec:
  selector:
    app: hello-app-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
